--- a/evangelho.html
+++ b/evangelho.html
@@ -1,1 +1,146 @@
-Em produção
+<!DOCTYPE html>
+<html lang="pt-br">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Perdão - Mundo Espírita</title>
+    <style>
+        body {
+            font-family: 'Arial', sans-serif; /* Fonte padrão */
+            background-color: #f8f8f8; /* Cor de fundo suave */
+            color: #333; /* Texto em cinza escuro para melhor contraste */
+            margin: 0;
+            padding: 20px; /* Adiciona um pouco de espaçamento */
+        }
+
+        h1 {
+            font-size: 2.5em; /* Tamanho do título */
+            margin-bottom: 20px; /* Espaçamento abaixo do título */
+            color: #007BFF; /* Cor do título */
+            text-align: center; /* Centraliza o título */
+        }
+
+        h2 {
+            font-size: 1.8em; /* Tamanho dos subtítulos */
+            margin-top: 30px; /* Espaçamento acima do subtítulo */
+            color: #000; /* Cor preta para os subtítulos */
+            font-weight: bold; /* Deixa o subtítulo em negrito */
+        }
+
+        p {
+            line-height: 1.6; /* Aumenta o espaçamento entre linhas */
+            margin-bottom: 20px; /* Espaçamento abaixo de cada parágrafo */
+            text-align: justify; /* Justifica o texto */
+        }
+
+        footer {
+            margin-top: 40px; /* Espaçamento acima do rodapé */
+            text-align: center; /* Centraliza o texto do rodapé */
+            font-size: 0.9em; /* Tamanho da fonte do rodapé */
+            color: #666; /* Cor do texto do rodapé */
+        }
+
+        .cor-destaque {
+            color: #FFA500; /* Cor laranja */
+        }
+    </style>
+</head>
+
+<body>
+    <h1>Evangelho do Lar</h1>
+
+    <p><strong><h2>Evangelho no Lar: Semeando Paz e Harmonia no Ambiente Familiar </strong> </p></h1>
+
+    <p> Nos desafios do dia a dia, onde encontramos refúgio para o espírito? Para muitas famílias, o Evangelho no Lar se
+        tornou esse porto seguro. Uma prática que tem ganhado espaço entre famílias que buscam harmonia e crescimento
+        espiritual, o Evangelho no Lar é inspirado nos ensinamentos de Jesus Cristo e na doutrina espírita, mas também
+        encontra ressonância em outras tradições religiosas e espirituais. Esse momento de reunião familiar promove não
+        apenas a união, mas também a elevação espiritual. Mas como essa prática funciona, qual sua origem e por que ela
+        é tão significativa? Vamos explorar.</p>
+
+       <p><strong><h2> O que é o Evangelho no Lar?</strong> </p></h1>
+
+    <p>O Evangelho no Lar é uma reunião espiritual realizada em casa, com a família reunida em um ambiente de respeito e
+        harmonia. Inspirado na passagem bíblica de Mateus 18:20 — "onde estiverem duas ou três pessoas reunidas em meu
+        nome, eu ali estarei" —, essa prática busca fortalecer a conexão com Deus e com os espíritos de luz, também
+        chamados de Espiritualidade Superior na doutrina espírita.</p>
+
+    <p>A prática tem suas raízes no movimento espírita, que surgiu no século XIX com as obras de Allan Kardec, especialmente O Evangelho Segundo o Espiritismo. No entanto, a ideia de reunir a família para oração e reflexão é universal, presente em diversas tradições religiosas, como o cristianismo, o judaísmo e o islamismo, onde momentos de devoção familiar são valorizados.</p>
+
+    <p>O objetivo principal é criar um espaço de reflexão, aprendizado e oração, onde todos possam se conectar com os
+        ensinamentos de Jesus Cristo e aplicá-los no dia a dia. Além disso, o Evangelho no Lar promove um ambiente de paz
+        e união, auxiliando a família a enfrentar os desafios com mais serenidade e fé.</p>
+
+     <p><strong><h2>Como realizar o Evangelho no Lar?</strong> </p></h1>
+
+    <p>A prática do Evangelho no Lar é simples, mas requer dedicação e regularidade. Aqui está um passo a passo para começar:</p>
+
+    <strong><p><span class=cor-destaque> 1) Escolha um dia e horário fixos:</strong></p></span>
+    <p>Estabeleça um momento semanal para a reunião, criando uma rotina de dedicação espiritual. A constância é fundamental para que a prática se torne um hábito enraizado na vida familiar.</p>
+
+    <strong><p><span class=cor-destaque> 2) Prepare o ambiente:</strong></p></span>
+    <p>Reúna a família em um local tranquilo e organizado. Muitos costumam colocar copos com água sobre a mesa, acreditando
+        que, ao final do encontro, essa água estará impregnada de boas energias, auxiliando no equilíbrio físico e
+        espiritual. Essa prática é comum no espiritismo, mas pode ser adaptada conforme a crença de cada família.</p>
+
+    <strong><p><span class=cor-destaque> 3) Inicie com uma prece:</strong></p></span>
+    <p>Comece o encontro com uma oração simples, agradecendo a Deus pela oportunidade de estar reunido e pedindo luz e
+        proteção para todos. A oração inicial ajuda a criar um clima de reverência e conexão espiritual.</p>
+
+    <strong><p><span class=cor-destaque> 4) Leia e reflita sobre o Evangelho:</strong></p></span>
+    <p>Leia um trecho de O Evangelho Segundo o Espiritismo, de Allan Kardec, ou de outro livro espiritual que traga
+        ensinamentos cristãos. Em seguida, compartilhem reflexões sobre como aplicar esses ensinamentos no cotidiano. Esse
+        momento de diálogo é essencial para fortalecer os laços familiares e promover o crescimento espiritual.</p>
+
+    <strong><p><span class=cor-destaque> 5) Encerre com uma prece final:</strong></p></span>
+    <p>Finalize com uma oração de gratidão, pedindo paz e proteção para a família e para todos que necessitam de ajuda.
+        Muitas famílias também incluem vibrações de amor e luz para aqueles que estão sofrendo, sejam encarnados ou
+        desencarnados.</p>
+
+  <p><strong><h2> Benefícios do Evangelho no Lar</strong> </p></h1>
+
+    <p>A prática regular do Evangelho no Lar traz inúmeros benefícios para a família e para o ambiente doméstico. Entre
+        eles, destacam-se:</p>
+
+    <p><strong><p><span class=cor-destaque> 1) Fortalecimento dos laços familiares:</span></strong> A reunião semanal promove o diálogo, o respeito e a união entre os membros da
+        família. É um momento para ouvir e ser ouvido, criando um espaço seguro para compartilhar sentimentos e
+        experiências.</p>
+
+    <strong><p><span class=cor-destaque> 2) Crescimento espiritual:</span></strong> Ao estudar os ensinamentos de Jesus e refletir sobre sua aplicação no dia a dia, todos
+        evoluem espiritualmente. A prática também ajuda a desenvolver virtudes como paciência, compaixão e humildade.</p>
+
+    <p><span class=cor-destaque><strong> 3) Paz e harmonia no lar:</span></strong> O ambiente da casa se torna mais leve e tranquilo, favorecendo a convivência e o bem-estar
+        de todos. Muitos adeptos relatam que, ao longo do tempo, percebem uma mudança positiva no clima emocional do lar.</p>
+
+    <p><span class=cor-destaque><strong> 4) Proteção espiritual:</span></strong> As orações e a presença dos espíritos de luz ajudam a afastar energias negativas e a trazer
+        proteção para a família. A água fluidificada, quando utilizada, também é vista como um recurso para o equilíbrio
+        energético.</p>
+
+  <p><strong><h2> Reflexões Finais: A Oração como Elo Espiritual</strong> </p></h1>
+
+    <p>De acordo com O Evangelho Segundo o Espiritismo, a oração é um poderoso instrumento de conexão com Deus e com os
+        planos espirituais. Como destacado por Santo Agostinho, a prece nos ajuda a refletir sobre nossa existência e
+        nosso destino espiritual, especialmente em um mundo de provas e expiações como a Terra.</p>
+
+
+
+    <p>Além disso, é importante lembrar que práticas semelhantes ao Evangelho no Lar existem em outras tradições. No
+        judaísmo, por exemplo, o Shabat é um momento sagrado de reunião familiar e reflexão espiritual. No islamismo,
+        as orações em família são incentivadas como forma de fortalecer a fé e a união. Esses paralelos mostram que a
+        busca por conexão espiritual e harmonia familiar é um desejo universal.</p>
+
+  <p><strong><h2>Conclusão: Um Convite à Paz no Lar</strong> </p></h1>
+
+    <p>O Evangelho no Lar é mais do que uma reunião familiar; é um momento de conexão com Deus, com os espíritos de luz
+        e consigo mesmo. Ao dedicar um tempo semanal para essa prática, você não só fortalece os laços familiares, mas
+        também cria um ambiente de paz e amor que se reflete em todos os aspectos da vida.</p>
+
+    <p>Que tal dar esse primeiro passo hoje? Reúna sua família, abra o coração para os ensinamentos de Jesus e permita
+        que a luz espiritual ilumine seu lar. Como diz o ditado, "a família que ora unida, permanece unida". E, ao abrir
+        as portas do seu lar para o Evangelho, você também abre seu coração para a serenidade e a transformação.</p>
+
+</body>
+
+</html>
