--- a/textos.html
+++ b/textos.html
@@ -155,6 +155,10 @@
                 <div class="accordion-title" onclick="toggleAccordion('texto6', 'evangelho.html')">Evangelho do Lar</div>
                 <div class="accordion-content" id="texto6"></div>
             </div>
+             <div class="accordion">
+                <div class="accordion-title" onclick="toggleAccordion('texto7', 'Espiritismo.html')">O que é o Espiritismo</div>
+                <div class="accordion-content" id="texto7"></div>
+            </div>
 
         </div>
     </section>
