--- a/amizade.html
+++ b/amizade.html
@@ -77,6 +77,13 @@
 
     <p>Conforme Jesus nos ensinou a amar até mesmo nossos inimigos, quanto mais amor devemos oferecer aos que nos entregam o coração?</p>
 
+
+    <p><h2>Conclusão: Um Convite à Reflexão</h2>
+	A amizade, sob a luz do Espiritismo, é um laço sagrado que nos une a outras almas em nossa jornada evolutiva. Ela nos ensina a perdoar, a amar incondicionalmente e a crescer juntos. Que possamos cultivar nossas amizades com gratidão e dedicação, lembrando que, como disse Jesus, “não há maior amor do que dar a vida pelos amigos” (João 15:13).
+
+	E você, como tem cuidado de suas amizades? Que tal refletir sobre os laços que unem você às pessoas ao seu redor e buscar fortalecê-los com amor e perdão? Afinal, como nos ensina o Espiritismo, a amizade sincera é um oásis de repouso na jornada da vida.
+
+
     <footer>
         <p>&copy; 2024 mundo.espirita. Todos os direitos reservados.</p>
     </footer>
