--- a/fe.html
+++ b/fe.html
@@ -1,1 +1,51 @@
-<p>A fé é a força que transporta montanhas e ilumina o caminho da alma. Quando acreditamos verdadeiramente, nada é impossível.</p>
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Perdão - Mundo Espírita</title>
+    <style>
+        body {
+            font-family: 'Arial', sans-serif; /* Fonte padrão */
+            background-color: #f8f8f8; /* Cor de fundo suave */
+            color: #333; /* Texto em cinza escuro para melhor contraste */
+            margin: 0;
+            padding: 20px; /* Adiciona um pouco de espaçamento */
+        }
+        h1 {
+            font-size: 2.5em; /* Tamanho do título */
+            margin-bottom: 20px; /* Espaçamento abaixo do título */
+            color: #007BFF; /* Cor do título */
+            text-align: center; /* Centraliza o título */
+        }
+        h2 {
+            font-size: 1.8em; /* Tamanho dos subtítulos */
+            margin-top: 30px; /* Espaçamento acima do subtítulo */
+            color: #000; /* Cor preta para os subtítulos */
+            font-weight: bold; /* Deixa o subtítulo em negrito */
+        }
+        p {
+            line-height: 1.6; /* Aumenta o espaçamento entre linhas */
+            margin-bottom: 20px; /* Espaçamento abaixo de cada parágrafo */
+            text-align: justify; /* Justifica o texto */
+        }
+        footer {
+            margin-top: 40px; /* Espaçamento acima do rodapé */
+            text-align: center; /* Centraliza o texto do rodapé */
+            font-size: 0.9em; /* Tamanho da fonte do rodapé */
+            color: #666; /* Cor do texto do rodapé */
+        }
+    </style>
+</head>
+<body>
+    <h1>Fé</h1>
+
+
+<p> Em breve </p>
+
+    <footer>
+        <p>&copy; 2024 mundo.espirita. Todos os direitos reservados.</p>
+    </footer>
+</body>
+</html>
