--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
-
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>mundo.espirita</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+    />
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -78,13 +80,11 @@
     </header>
 
     <nav>
-        <a href="index.html">Home</a>
-        <a href="textos.html">Textos</a>
-	<a href="pensamento.html">Pensamentos</a>
-        <a href="videos.html">Vídeos</a>
-        <a href="redes-sociais.html">Redes Sociais</a>
-	
-	
+        <a href="./index.html">Home</a>
+        <a href="./textos.html">Textos</a>
+        <a href="./pensamentos.html">Pensamentos</a>
+        <a href="./videos.html">Vídeos</a>
+        <a href="./redes-sociais.html">Redes Sociais</a>
     </nav>
 
     <!-- Página Inicial -->
@@ -92,17 +92,14 @@
         <div class="content">
             <h2>Bem-vindo ao mundo.espirita!</h2>
             <p>Aqui compartilho reflexões sobre espiritualidade, autoconhecimento e o impacto do Espiritismo em nossas vidas. Explore nossos textos, vídeos e redes sociais para uma jornada de evolução e aprendizado.</p>
-
-        
-
         </div>
     </section>
 
     <footer>
         <p>&copy; 2024 mundo.espirita. Todos os direitos reservados.</p>
         <div>
-            <a href="https://www.instagram.com/_mundo_espirita?igsh=MXEzbG9wMTc0MG54aw==" target="_blank"><i class="fab fa-instagram"></i></a>
-            <a href="https://www.youtube.com/@_mundo_espirita" target="_blank"><i class="fab fa-youtube"></i></a>
+            <a href="https://www.instagram.com/_mundo_espirita?igsh=MXEzbG9wMTc0MG54aw==" target="_blank" rel="noopener noreferrer"><i class="fab fa-instagram"></i></a>
+            <a href="https://www.youtube.com/@_mundo_espirita" target="_blank" rel="noopener noreferrer"><i class="fab fa-youtube"></i></a>
         </div>
     </footer>
 
