--- a/pensamento.html
+++ b/pensamento.html
@@ -138,19 +138,11 @@
             </p>
 
             <div class="accordion">
-                <div class="accordion-title" onclick="toggleAccordion('texto1', 'pensamento1.html')">A fé transporta montanhas</div>
+                <div class="accordion-title" onclick="toggleAccordion('texto1', 'fe.html')">Em breve</div>
                 <div class="accordion-content" id="texto1"></div>
             </div>
 
-            <div class="accordion">
-                <div class="accordion-title" onclick="toggleAccordion('texto2', 'pensamento2.html')">O valor da gratidão</div>
-                <div class="accordion-content" id="texto2"></div>
-            </div>
-
-            <div class="accordion">
-                <div class="accordion-title" onclick="toggleAccordion('texto3', 'pensamento3.html')">Caminho da luz</div>
-                <div class="accordion-content" id="texto3"></div>
-            </div>
+           
             <!-- Adicione mais pensamentos seguindo o mesmo padrão -->
         </div>
     </section>
