--- a/fe.html
+++ b/fe.html
@@ -42,7 +42,19 @@
     <h1>Fé</h1>
 
 
-<p> Em breve </p>
+<p> Lendo um trecho do livro Amor e Verdade, de Francisco Cândido Xavier, ditado por Espíritos Diversos — capítulo 2, do amigo Celso Cassanha —, comecei a refletir sobre o quanto estamos apegados e envolvidos em nossas questões terrenas.  
+O quanto a rotina pode nos engolir, e o quanto podemos nos distanciar da nossa missão maior.
+
+A vida na Terra é difícil, desafiadora, cheia de dores — mas também repleta de alegrias.  
+Estamos aqui, mais uma vez. Mas o que estamos fazendo com essa oportunidade? Qual é o nosso propósito?  
+Estamos caminhando rumo ao progresso, ou apenas enraizando antigos e novos desafetos?
+
+Sempre me recordo da passagem que diz: “Amar quem nos ama é fácil; difícil é amar um desafeto.”  
+E talvez aí resida o verdadeiro trabalho do espírito.
+
+Se, de fato, o espírito reside onde está o coração, onde temos colocado o nosso?  
+Para onde estamos canalizando nossa energia?  
+Esse coração tem sido nutrido de amor — ou de mágoas, rancor, raiva? </p>
 
     <footer>
         <p>&copy; 2024 mundo.espirita. Todos os direitos reservados.</p>
