--- a/pensamento.html
+++ b/pensamento.html
@@ -138,7 +138,7 @@
             </p>
 
             <div class="accordion">
-                <div class="accordion-title" onclick="toggleAccordion('texto1', 'fe.html')">Em breve</div>
+                <div class="accordion-title" onclick="toggleAccordion('texto1', 'fe.html')">O espírito reside onde está o coração</div>
                 <div class="accordion-content" id="texto1"></div>
             </div>
 
