--- a/pensamento.html
+++ b/pensamento.html
@@ -142,6 +142,11 @@
                 <div class="accordion-content" id="texto1"></div>
             </div>
 
+ 	<div class="accordion">
+                <div class="accordion-title" onclick="toggleAccordion('texto2', 'vidas.html')"> Vidas </div>
+                <div class="accordion-content" id="texto2"></div>
+            </div>
+
            
             <!-- Adicione mais pensamentos seguindo o mesmo padrão -->
         </div>
