--- a/fe.html
+++ b/fe.html
@@ -39,7 +39,7 @@
     </style>
 </head>
 <body>
-    <h1>Fé</h1>
+    <h1>O espírito reside onde está o coração</h1>
 
 
 <p> Lendo um trecho do livro Amor e Verdade, de Francisco Cândido Xavier, ditado por Espíritos Diversos — capítulo 2, do amigo Celso Cassanha —, comecei a refletir sobre o quanto estamos apegados e envolvidos em nossas questões terrenas.  
